--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "jest",
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seeds": "node ./seeds/index.js"
+    "seed": "node ./seeds/index.js"
   },
   "repository": {
     "type": "git",
